Terraform/vpc.tf
# ---------------------------------------------------------------------------------------------------------------------
#This will create the Application VPC for the FEMA DAIP Project. #
# ---------------------------------------------------------------------------------------------------------------------
data "aws_availability_zones" "all" {}

# --------------------------------------------------------------------------------------------------------------------
# CREATE THE DAIP VPC
# --------------------------------------------------------------------------------------------------------------------
resource "aws_vpc" "DAIP-VPC" {
  cidr_block = "10.0.0.0/16"

  tags {
    Name = "FEMA-DAIP-VPC"
  }
}

# --------------------------------------------------------------------------------------------------------------------
# CREATE THE DAIP IGW
# --------------------------------------------------------------------------------------------------------------------
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.DAIP-VPC.id}"

  tags {
    Name = "DAIP-IGW"
  }
}
